--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
 /////Database info/////
 DB_HOST='localhost'
-DB_PORT='5432'
+DB_PORT=5432
 DB_USERNAME='postgres'
 DB_PASSWORD='123456'
 DB_NAME='taskmanagement'
 
-  
+/////Connection info/////
+NODE_ENV=development
+PORT=3000
